--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: Home
       <circle cx="11" cy="11" r="8"/>
       <line x1="21" y1="21" x2="16.65" y2="16.65"/>
     </svg>
-    <input type="text" id="search-input" class="search-input" placeholder="Search posts...">
+    <input type="text" id="search-input" name="search" class="search-input" placeholder="Search posts...">
     <div id="search-results" class="search-results"></div>
   </div>
 
