feat: 자격증 기출문제 섹션 추가 및 추가 포스트 연결
- 모든 자격증 페이지에 기출문제 및 연습 문제 섹션 추가
  - AWS-SAA: 4개 기출문제 (VPC, IAM, DB 보안, 비용 최적화)
  - ISMS-P: 3개 기출문제 (정책, 접근 통제, 암호화)
  - CKAD: 3개 실전 연습 문제 (Pod, ConfigMap, Service)
  - CKA: 3개 실전 연습 문제 (클러스터 관리, 트러블슈팅, 네트워크)
  - 정보보안기사: 2개 기출문제 (시스템 보안, 네트워크 보안)
  - 정보처리기사: 2개 기출문제 (소프트웨어 설계, DB 구축)

- 추가 포스트에 자격증 태그 연결
  - AWS Control Tower 관련 포스트 2개 → aws-saa
  - AWS WAF/CloudFront 포스트 → aws-saa

- 각 문제에 관련 포스팅 링크 및 해설 추가
- 학습 팁 섹션 추가

--- a/certifications/information-processing-engineer.html
+++ b/certifications/information-processing-engineer.html
@@ -127,6 +127,67 @@ permalink: /certifications/information-processing-engineer/
       </div>
     </div>
   </div>
+
+  <div class="exam-questions">
+    <h2>기출문제 및 연습 문제</h2>
+    <div class="questions-intro">
+      <p>다음은 정보처리기사 자격증 준비를 위한 기출문제 및 연습 문제입니다. 각 문제는 관련 포스팅과 연결되어 있어 상세한 설명을 확인할 수 있습니다.</p>
+    </div>
+
+    <div class="questions-section">
+      <h3>2024년 이후 기출문제</h3>
+      
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 1</span>
+          <span class="question-topic">소프트웨어 설계</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> 요구사항 분석 단계에서 사용자 요구사항을 명확히 파악하기 위한 기법이 아닌 것은?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> 인터뷰</p>
+            <p><strong>B.</strong> 설문조사</p>
+            <p><strong>C.</strong> 프로토타이핑</p>
+            <p><strong>D.</strong> 코드 리뷰</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> D</p>
+            <p><strong>해설:</strong> 코드 리뷰는 구현 단계에서 수행하는 활동이며, 요구사항 분석 단계의 기법이 아닙니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 2</span>
+          <span class="question-topic">데이터베이스 구축</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> 관계형 데이터베이스에서 정규화의 목적은?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> 데이터 중복 제거 및 무결성 향상</p>
+            <p><strong>B.</strong> 쿼리 성능 향상</p>
+            <p><strong>C.</strong> 저장 공간 절약</p>
+            <p><strong>D.</strong> 모든 것</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> A</p>
+            <p><strong>해설:</strong> 정규화의 주요 목적은 데이터 중복을 제거하고 데이터 무결성을 향상시키는 것입니다.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="study-tips">
+      <h3>학습 팁</h3>
+      <ul>
+        <li>각 과목별 핵심 개념을 정리하여 학습하세요</li>
+        <li>실기 시험을 대비하여 알고리즘 문제를 많이 풀어보세요</li>
+        <li>SQL 작성 능력을 향상시키세요</li>
+        <li>관련 포스팅의 실무 사례를 통해 이해도를 높이세요</li>
+      </ul>
+    </div>
+  </div>
 </div>
 
 <style>
@@ -240,6 +301,135 @@ permalink: /certifications/information-processing-engineer/
   font-style: italic;
 }
 
+.exam-questions {
+  margin-bottom: 3rem;
+}
+
+.exam-questions h2 {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+  color: var(--text-primary);
+  border-bottom: 2px solid var(--border);
+  padding-bottom: 0.5rem;
+}
+
+.questions-intro {
+  margin-bottom: 2rem;
+  padding: 1.5rem;
+  background: var(--bg-secondary);
+  border-radius: 8px;
+  border-left: 4px solid var(--primary);
+}
+
+.questions-section {
+  margin-bottom: 2rem;
+}
+
+.questions-section h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+  color: var(--text-primary);
+}
+
+.question-card {
+  margin-bottom: 2rem;
+  padding: 1.5rem;
+  background: var(--bg-secondary);
+  border-radius: 8px;
+  border: 1px solid var(--border);
+  transition: box-shadow 0.2s;
+}
+
+.question-card:hover {
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.question-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+  padding-bottom: 0.75rem;
+  border-bottom: 2px solid var(--border);
+}
+
+.question-number {
+  font-weight: 600;
+  color: var(--primary);
+  font-size: 1.1rem;
+}
+
+.question-topic {
+  font-size: 0.9rem;
+  color: var(--text-secondary);
+  background: var(--bg-primary);
+  padding: 0.25rem 0.75rem;
+  border-radius: 12px;
+}
+
+.question-content p {
+  margin-bottom: 1rem;
+  line-height: 1.6;
+}
+
+.question-options {
+  margin: 1.5rem 0;
+  padding-left: 1rem;
+}
+
+.question-options p {
+  margin-bottom: 0.75rem;
+  padding: 0.5rem;
+  background: var(--bg-primary);
+  border-radius: 4px;
+}
+
+.question-answer {
+  margin-top: 1.5rem;
+  padding: 1rem;
+  background: var(--primary);
+  color: white;
+  border-radius: 8px;
+}
+
+.question-answer p {
+  margin-bottom: 0.5rem;
+}
+
+.question-answer a {
+  color: white;
+  text-decoration: underline;
+}
+
+.question-answer a:hover {
+  text-decoration: none;
+}
+
+.study-tips {
+  margin-top: 3rem;
+  padding: 1.5rem;
+  background: var(--bg-secondary);
+  border-radius: 8px;
+  border-left: 4px solid var(--primary);
+}
+
+.study-tips h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  color: var(--text-primary);
+}
+
+.study-tips ul {
+  list-style: disc;
+  padding-left: 1.5rem;
+  color: var(--text-secondary);
+}
+
+.study-tips li {
+  margin-bottom: 0.75rem;
+  line-height: 1.6;
+}
+
 @media (max-width: 768px) {
   .page-header h1 {
     font-size: 2rem;
@@ -247,6 +437,12 @@ permalink: /certifications/information-processing-engineer/
   
   .topics-grid {
     grid-template-columns: 1fr;
+  }
+
+  .question-header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
   }
 }
 </style>
