--- a/certifications/information-security-engineer.html
+++ b/certifications/information-security-engineer.html
@@ -129,6 +129,67 @@ permalink: /certifications/information-security-engineer/
       </div>
     </div>
   </div>
+
+  <div class="exam-questions">
+    <h2>기출문제 및 연습 문제</h2>
+    <div class="questions-intro">
+      <p>다음은 정보보안기사 자격증 준비를 위한 기출문제 및 연습 문제입니다. 각 문제는 관련 포스팅과 연결되어 있어 상세한 설명을 확인할 수 있습니다.</p>
+    </div>
+
+    <div class="questions-section">
+      <h3>2024년 이후 기출문제</h3>
+      
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 1</span>
+          <span class="question-topic">시스템 보안</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> 운영체제 보안 강화를 위한 조치 중 가장 우선순위가 높은 것은?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> 최신 보안 패치 적용</p>
+            <p><strong>B.</strong> 방화벽 설정</p>
+            <p><strong>C.</strong> 백업 설정</p>
+            <p><strong>D.</strong> 로그 모니터링</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> A</p>
+            <p><strong>해설:</strong> 보안 패치 적용은 알려진 취약점을 해결하는 가장 기본적이고 중요한 조치입니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 2</span>
+          <span class="question-topic">네트워크 보안</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> 침입 탐지 시스템(IDS)과 침입 방지 시스템(IPS)의 차이점은?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> IDS는 탐지만, IPS는 탐지 및 차단</p>
+            <p><strong>B.</strong> IDS는 차단만, IPS는 탐지만</p>
+            <p><strong>C.</strong> 차이점 없음</p>
+            <p><strong>D.</strong> IDS는 하드웨어, IPS는 소프트웨어</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> A</p>
+            <p><strong>해설:</strong> IDS는 침입을 탐지하고 알림만 제공하며, IPS는 탐지 후 자동으로 차단까지 수행합니다.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="study-tips">
+      <h3>학습 팁</h3>
+      <ul>
+        <li>각 과목별 핵심 개념을 정리하여 학습하세요</li>
+        <li>실기 시험을 대비하여 실제 보안 도구 사용법을 익히세요</li>
+        <li>최신 보안 트렌드와 기술을 파악하세요</li>
+        <li>관련 포스팅의 실무 사례를 통해 이해도를 높이세요</li>
+      </ul>
+    </div>
+  </div>
 </div>
 
 <style>
@@ -242,6 +303,135 @@ permalink: /certifications/information-security-engineer/
   font-style: italic;
 }
 
+.exam-questions {
+  margin-bottom: 3rem;
+}
+
+.exam-questions h2 {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+  color: var(--text-primary);
+  border-bottom: 2px solid var(--border);
+  padding-bottom: 0.5rem;
+}
+
+.questions-intro {
+  margin-bottom: 2rem;
+  padding: 1.5rem;
+  background: var(--bg-secondary);
+  border-radius: 8px;
+  border-left: 4px solid var(--primary);
+}
+
+.questions-section {
+  margin-bottom: 2rem;
+}
+
+.questions-section h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+  color: var(--text-primary);
+}
+
+.question-card {
+  margin-bottom: 2rem;
+  padding: 1.5rem;
+  background: var(--bg-secondary);
+  border-radius: 8px;
+  border: 1px solid var(--border);
+  transition: box-shadow 0.2s;
+}
+
+.question-card:hover {
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.question-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+  padding-bottom: 0.75rem;
+  border-bottom: 2px solid var(--border);
+}
+
+.question-number {
+  font-weight: 600;
+  color: var(--primary);
+  font-size: 1.1rem;
+}
+
+.question-topic {
+  font-size: 0.9rem;
+  color: var(--text-secondary);
+  background: var(--bg-primary);
+  padding: 0.25rem 0.75rem;
+  border-radius: 12px;
+}
+
+.question-content p {
+  margin-bottom: 1rem;
+  line-height: 1.6;
+}
+
+.question-options {
+  margin: 1.5rem 0;
+  padding-left: 1rem;
+}
+
+.question-options p {
+  margin-bottom: 0.75rem;
+  padding: 0.5rem;
+  background: var(--bg-primary);
+  border-radius: 4px;
+}
+
+.question-answer {
+  margin-top: 1.5rem;
+  padding: 1rem;
+  background: var(--primary);
+  color: white;
+  border-radius: 8px;
+}
+
+.question-answer p {
+  margin-bottom: 0.5rem;
+}
+
+.question-answer a {
+  color: white;
+  text-decoration: underline;
+}
+
+.question-answer a:hover {
+  text-decoration: none;
+}
+
+.study-tips {
+  margin-top: 3rem;
+  padding: 1.5rem;
+  background: var(--bg-secondary);
+  border-radius: 8px;
+  border-left: 4px solid var(--primary);
+}
+
+.study-tips h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  color: var(--text-primary);
+}
+
+.study-tips ul {
+  list-style: disc;
+  padding-left: 1.5rem;
+  color: var(--text-secondary);
+}
+
+.study-tips li {
+  margin-bottom: 0.75rem;
+  line-height: 1.6;
+}
+
 @media (max-width: 768px) {
   .page-header h1 {
     font-size: 2rem;
@@ -249,6 +439,12 @@ permalink: /certifications/information-security-engineer/
   
   .topics-grid {
     grid-template-columns: 1fr;
+  }
+
+  .question-header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
   }
 }
 </style>
