--- a/certifications/aws-saa.html
+++ b/certifications/aws-saa.html
@@ -17,12 +17,18 @@ permalink: /certifications/aws-saa/
     <h2>자격증 정보</h2>
     <ul>
       <li><strong>공식 명칭:</strong> AWS Certified Solutions Architect - Associate (SAA)</li>
-      <li><strong>시험 시간:</strong> 130분</li>
-      <li><strong>문제 수:</strong> 65문제 (객관식, 복수 선택)</li>
+      <li><strong>시험 코드:</strong> SAA-C03</li>
+      <li><strong>시험 시간:</strong> 130분 (40분 추가 시간 신청 가능, 총 170분)</li>
+      <li><strong>문제 수:</strong> 65문제 (단수 선택 4개 중 1개, 복수 선택 5개 중 2개)</li>
+      <li><strong>채점 문제:</strong> 65문제 중 50문제만 채점 (나머지 15문제는 데이터 수집용)</li>
       <li><strong>합격 점수:</strong> 720점 / 1000점</li>
       <li><strong>유효 기간:</strong> 3년</li>
-      <li><strong>시험 비용:</strong> $150 USD</li>
+      <li><strong>시험 비용:</strong> $150 USD (할인 바우처 사용 가능)</li>
+      <li><strong>시험 형식:</strong> 온라인 또는 시험 센터</li>
     </ul>
+    <div style="margin-top: 1rem; padding: 1rem; background: var(--bg-secondary); border-radius: 8px; border-left: 4px solid var(--primary);">
+      <p style="margin: 0;"><strong>💡 시험 팁:</strong> 시험 신청 전에 40분 추가 시간을 요청할 수 있습니다. 가능하면 신청하세요. 시험 준비 시간(10분)이 기본으로 포함되어 있어 실제 시험 시간은 160분부터 차감됩니다.</p>
+    </div>
   </div>
 
   <div class="related-posts">
@@ -198,16 +204,294 @@ permalink: /certifications/aws-saa/
           </div>
         </div>
       </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 5</span>
+          <span class="question-topic">S3 및 스토리지</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> 자주 접근하지 않는 데이터를 비용 효율적으로 저장하려고 합니다. 데이터는 즉시 접근 가능해야 하지만, 자주 사용되지 않습니다. 어떤 S3 스토리지 클래스를 사용해야 합니까?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> S3 Standard</p>
+            <p><strong>B.</strong> S3 Intelligent-Tiering</p>
+            <p><strong>C.</strong> S3 Standard-IA (Infrequent Access)</p>
+            <p><strong>D.</strong> S3 Glacier Instant Retrieval</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> C</p>
+            <p><strong>해설:</strong> S3 Standard-IA는 자주 접근하지 않는 데이터를 즉시 접근 가능한 상태로 저장하면서도 비용을 절감할 수 있는 스토리지 클래스입니다. S3 Glacier Instant Retrieval도 가능하지만, Standard-IA가 더 일반적인 선택입니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 6</span>
+          <span class="question-topic">고가용성 및 확장성</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> 트래픽이 예측 불가능하게 변동하는 웹 애플리케이션을 운영하고 있습니다. 트래픽 증가에 따라 자동으로 인스턴스를 추가하고, 트래픽 감소 시 인스턴스를 제거하려면 어떤 서비스를 사용해야 합니까?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> Elastic Load Balancer만 사용</p>
+            <p><strong>B.</strong> Auto Scaling Group과 Elastic Load Balancer 조합</p>
+            <p><strong>C.</strong> CloudWatch만 사용</p>
+            <p><strong>D.</strong> EC2 인스턴스를 수동으로 추가/제거</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> B</p>
+            <p><strong>해설:</strong> Auto Scaling Group은 CloudWatch 메트릭을 기반으로 자동으로 인스턴스를 추가하거나 제거합니다. Elastic Load Balancer와 함께 사용하면 트래픽을 여러 인스턴스에 분산시킬 수 있습니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 7</span>
+          <span class="question-topic">데이터베이스</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> 읽기 작업이 많은 애플리케이션에서 RDS 데이터베이스의 성능을 향상시키려고 합니다. 읽기 전용 복제본을 여러 개 생성하여 읽기 트래픽을 분산시키려면 어떤 방법을 사용해야 합니까?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> RDS Read Replica를 여러 개 생성하고 애플리케이션에서 직접 연결</p>
+            <p><strong>B.</strong> RDS Read Replica를 생성하고 Application Load Balancer를 사용하여 트래픽 분산</p>
+            <p><strong>C.</strong> RDS Read Replica를 생성하고 Route 53을 사용하여 트래픽 분산</p>
+            <p><strong>D.</strong> RDS Multi-AZ를 사용</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> A</p>
+            <p><strong>해설:</strong> RDS Read Replica는 읽기 전용 복제본으로, 여러 개 생성하여 애플리케이션에서 직접 연결하여 읽기 트래픽을 분산시킬 수 있습니다. Load Balancer는 RDS에 직접 연결할 수 없습니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 8</span>
+          <span class="question-topic">네트워킹</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> 프라이빗 서브넷의 EC2 인스턴스가 인터넷에 접근하여 소프트웨어 업데이트를 다운로드해야 합니다. 인터넷 게이트웨이를 사용할 수 없는 프라이빗 서브넷에서 인터넷 접근을 제공하려면 어떤 서비스를 사용해야 합니까?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> NAT Gateway</p>
+            <p><strong>B.</strong> NAT Instance</p>
+            <p><strong>C.</strong> VPN Gateway</p>
+            <p><strong>D.</strong> Direct Connect</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> A</p>
+            <p><strong>해설:</strong> NAT Gateway는 프라이빗 서브넷의 인스턴스가 인터넷에 접근할 수 있도록 하는 관리형 서비스입니다. NAT Instance도 가능하지만, NAT Gateway가 더 안정적이고 관리가 쉽습니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 9</span>
+          <span class="question-topic">Lambda 및 서버리스</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> S3 버킷에 파일이 업로드될 때마다 자동으로 이미지를 리사이징하는 서버리스 애플리케이션을 구축하려고 합니다. 어떤 서비스 조합을 사용해야 합니까?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> S3 Event Notification → Lambda → S3</p>
+            <p><strong>B.</strong> CloudWatch Events → Lambda → S3</p>
+            <p><strong>C.</strong> S3 Event Notification → EC2 → S3</p>
+            <p><strong>D.</strong> EventBridge → Lambda → S3</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> A</p>
+            <p><strong>해설:</strong> S3 Event Notification을 사용하여 파일 업로드 이벤트를 Lambda 함수로 전달하고, Lambda 함수에서 이미지를 리사이징한 후 다시 S3에 저장하는 것이 가장 효율적인 방법입니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 10</span>
+          <span class="question-topic">보안 및 암호화</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> S3 버킷에 저장된 민감한 데이터를 암호화하려고 합니다. 서버 측 암호화(SSE)를 사용하면서도 암호화 키를 완전히 제어하려면 어떤 방법을 사용해야 합니까?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> SSE-S3 (S3 관리형 키)</p>
+            <p><strong>B.</strong> SSE-KMS (AWS KMS 관리형 키)</p>
+            <p><strong>C.</strong> SSE-C (고객 제공 키)</p>
+            <p><strong>D.</strong> 클라이언트 측 암호화</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> C</p>
+            <p><strong>해설:</strong> SSE-C(Server-Side Encryption with Customer-Provided Keys)는 고객이 제공한 암호화 키를 사용하여 S3에서 데이터를 암호화합니다. 키를 완전히 제어할 수 있지만, 키 관리 책임도 고객에게 있습니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 11</span>
+          <span class="question-topic">CloudFront 및 CDN</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> 전 세계 사용자에게 정적 웹사이트 콘텐츠를 빠르게 제공하려고 합니다. S3 버킷에 저장된 콘텐츠를 전 세계 엣지 로케이션을 통해 제공하려면 어떤 서비스를 사용해야 합니까?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> Route 53</p>
+            <p><strong>B.</strong> CloudFront</p>
+            <p><strong>C.</strong> API Gateway</p>
+            <p><strong>D.</strong> Elastic Load Balancer</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> B</p>
+            <p><strong>해설:</strong> CloudFront는 AWS의 CDN(Content Delivery Network) 서비스로, S3 버킷을 오리진으로 사용하여 전 세계 엣지 로케이션을 통해 콘텐츠를 빠르게 제공할 수 있습니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 12</span>
+          <span class="question-topic">모니터링 및 로깅</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> EC2 인스턴스의 CPU 사용률이 80%를 초과할 때 알림을 받고 싶습니다. 어떤 서비스를 사용해야 합니까?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> CloudWatch Alarms와 SNS</p>
+            <p><strong>B.</strong> CloudWatch Logs만 사용</p>
+            <p><strong>C.</strong> CloudTrail만 사용</p>
+            <p><strong>D.</strong> EventBridge만 사용</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> A</p>
+            <p><strong>해설:</strong> CloudWatch Alarms를 사용하여 CPU 사용률 메트릭을 모니터링하고, 임계값을 초과하면 SNS(Simple Notification Service)를 통해 알림을 전송할 수 있습니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 13</span>
+          <span class="question-topic">비용 최적화</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> 예측 불가능한 워크로드를 실행하려고 합니다. 중단이 허용되는 배치 작업에 가장 적합한 EC2 인스턴스 유형은 무엇입니까?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> On-Demand Instances</p>
+            <p><strong>B.</strong> Reserved Instances</p>
+            <p><strong>C.</strong> Spot Instances</p>
+            <p><strong>D.</strong> Dedicated Instances</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> C</p>
+            <p><strong>해설:</strong> Spot Instances는 중단이 허용되는 워크로드에 가장 비용 효율적인 옵션입니다. 최대 90%까지 할인된 가격으로 제공되지만, AWS가 용량이 필요할 때 인스턴스를 중단할 수 있습니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 14</span>
+          <span class="question-topic">데이터베이스 고가용성</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> RDS 데이터베이스의 고가용성을 보장하려고 합니다. 자동 장애 조치를 제공하면서도 동기식 복제를 사용하려면 어떤 구성을 사용해야 합니까?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> RDS Read Replica</p>
+            <p><strong>B.</strong> RDS Multi-AZ</p>
+            <p><strong>C.</strong> RDS Single-AZ</p>
+            <p><strong>D.</strong> RDS Snapshot</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> B</p>
+            <p><strong>해설:</strong> RDS Multi-AZ는 다른 가용 영역에 동기식 복제본을 생성하고, 자동으로 장애 조치를 수행합니다. Read Replica는 비동기식 복제이며 자동 장애 조치를 제공하지 않습니다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">문제 15</span>
+          <span class="question-topic">네트워크 보안</span>
+        </div>
+        <div class="question-content">
+          <p><strong>Q:</strong> VPC 내의 EC2 인스턴스 간 트래픽을 제어하려고 합니다. 특정 IP 주소에서만 접근을 허용하려면 어떤 보안 메커니즘을 사용해야 합니까?</p>
+          <div class="question-options">
+            <p><strong>A.</strong> Security Group만 사용</p>
+            <p><strong>B.</strong> Network ACL만 사용</p>
+            <p><strong>C.</strong> Security Group과 Network ACL 조합</p>
+            <p><strong>D.</strong> IAM Policy만 사용</p>
+          </div>
+          <div class="question-answer">
+            <p><strong>정답:</strong> C</p>
+            <p><strong>해설:</strong> Security Group은 인스턴스 레벨에서 트래픽을 제어하고, Network ACL은 서브넷 레벨에서 트래픽을 제어합니다. Defense in Depth 전략을 위해 둘 다 사용하는 것이 권장됩니다.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="questions-section">
+      <h3>시험 준비 팁 (블로그 포스트 기반)</h3>
+      
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">학습 전략</span>
+          <span class="question-topic">시험 준비</span>
+        </div>
+        <div class="question-content">
+          <p><strong>효과적인 학습 방법:</strong></p>
+          <ul style="margin-left: 1.5rem; margin-top: 1rem;">
+            <li><strong>Examtopics 덤프 문제 풀이:</strong> 250개 무료 문제를 활용하여 문제 풀이 감각을 익히세요. 단, discussion을 확인하여 정확한 정답을 확인하세요.</li>
+            <li><strong>NxtCloud 블로그 활용:</strong> 문제 풀이 사고 과정을 익히는 데 매우 유용합니다. 하루에 2-3개씩 꾸준히 읽어보세요.</li>
+            <li><strong>빠른 개념 정리:</strong> 개념을 완벽하게 정리하기보다는 빠르게 훑고, 문제 풀이 과정에서 부족한 개념을 채우는 전략이 효율적입니다.</li>
+            <li><strong>준비 기간:</strong> 가능하면 한 달 이내로 시험을 보는 것을 권장합니다. 준비 기간이 길어지면 개념과 문제 풀이 감각이 휘발되기 쉽습니다.</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="question-card">
+        <div class="question-header">
+          <span class="question-number">시험 팁</span>
+          <span class="question-topic">시험 당일</span>
+        </div>
+        <div class="question-content">
+          <p><strong>시험 당일 주의사항:</strong></p>
+          <ul style="margin-left: 1.5rem; margin-top: 1rem;">
+            <li><strong>추가 시간 신청:</strong> 시험 신청 전에 40분 추가 시간을 요청할 수 있습니다. 가능하면 신청하세요.</li>
+            <li><strong>신분증 준비:</strong> 주민등록증은 영문 이름이 없어 사용할 수 없습니다. 여권 또는 국제 운전면허증을 준비하세요.</li>
+            <li><strong>덤프 문제 기대하지 않기:</strong> 덤프 문제가 많이 나올 것이라는 가정은 하지 마세요. 실제 시험에서는 덤프에서 본 적 없는 문제가 많이 나올 수 있습니다.</li>
+            <li><strong>처음 보는 서비스 대비:</strong> iSCSI처럼 처음 보는 서비스가 등장할 수 있으므로 당황하지 마세요.</li>
+            <li><strong>시험 결과:</strong> 시험 후 몇 시간 내에 합격/불합격 결과를 이메일로 받을 수 있습니다.</li>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <div class="study-tips">
-      <h3>학습 팁</h3>
-      <ul>
-        <li>각 도메인별로 관련 포스팅을 읽으며 실무 경험을 쌓으세요</li>
-        <li>AWS Well-Architected Framework의 5개 기둥을 이해하세요</li>
-        <li>실제 시나리오 기반 문제를 많이 풀어보세요</li>
-        <li>관련 포스팅의 실전 예제를 따라해보며 이해도를 높이세요</li>
-      </ul>
+      <h3>학습 팁 및 추천 자료</h3>
+      <div style="margin-bottom: 1.5rem;">
+        <h4 style="color: var(--primary); margin-bottom: 0.75rem;">추천 학습 자료</h4>
+        <ul style="margin-left: 1.5rem;">
+          <li><strong>Examtopics 영문 덤프:</strong> <a href="https://www.examtopics.com/exams/amazon/aws-certified-solutions-architect-associate-saa-c03/view/1/" target="_blank" rel="noopener noreferrer">무료 250문제 제공</a> - discussion을 확인하여 정확한 정답 확인 필수</li>
+          <li><strong>NxtCloud의 AWS SAA 문제풀이 블로그:</strong> <a href="https://pacloud.tistory.com/" target="_blank" rel="noopener noreferrer">문제 풀이 사고 과정 학습</a> - 하루에 2-3개씩 꾸준히 읽기</li>
+          <li><strong>각종 요약 블로그:</strong> 개념 정리를 빠르게 훑기 위한 자료 활용</li>
+          <li><strong>Udemy 강의:</strong> AWS 지식이 전무한 경우에만 추천 (강의 수가 많아 시간 투자 필요)</li>
+        </ul>
+      </div>
+      <div style="margin-bottom: 1.5rem;">
+        <h4 style="color: var(--primary); margin-bottom: 0.75rem;">효과적인 학습 전략</h4>
+        <ul style="margin-left: 1.5rem;">
+          <li><strong>빠른 개념 정리:</strong> 개념을 완벽하게 정리하기보다는 빠르게 훑고, 문제 풀이 과정에서 부족한 개념을 채우는 전략</li>
+          <li><strong>문제 풀이 중심:</strong> Examtopics 덤프 문제를 하루에 30문제씩 풀며 논리적 사고 과정 익히기</li>
+          <li><strong>준비 기간:</strong> 한 달 이내로 시험을 보는 것을 권장 (개념과 문제 풀이 감각 유지)</li>
+          <li><strong>처음 보는 개념 학습:</strong> 문제에서 처음 보는 서비스나 기술이 나오면 GPT나 Perplexity를 활용하여 개념 숙지</li>
+        </ul>
+      </div>
+      <div>
+        <h4 style="color: var(--primary); margin-bottom: 0.75rem;">일반적인 학습 팁</h4>
+        <ul style="margin-left: 1.5rem;">
+          <li>각 도메인별로 관련 포스팅을 읽으며 실무 경험을 쌓으세요</li>
+          <li>AWS Well-Architected Framework의 5개 기둥을 이해하세요</li>
+          <li>실제 시나리오 기반 문제를 많이 풀어보세요</li>
+          <li>관련 포스팅의 실전 예제를 따라해보며 이해도를 높이세요</li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
@@ -325,6 +609,8 @@ permalink: /certifications/aws-saa/
 
 .exam-questions {
   margin-bottom: 3rem;
+  /* CLS 최적화: 최소 높이 설정으로 레이아웃 시프트 방지 */
+  min-height: 200px;
 }
 
 .exam-questions h2 {
@@ -373,12 +659,17 @@ permalink: /certifications/aws-saa/
   margin-bottom: 1rem;
   padding-bottom: 0.75rem;
   border-bottom: 2px solid var(--border);
+  /* CLS 최적화: 최소 높이 설정으로 레이아웃 시프트 방지 */
+  min-height: 40px;
 }
 
 .question-number {
   font-weight: 600;
   color: var(--primary);
   font-size: 1.1rem;
+  /* CLS 최적화: 인라인 블록으로 설정하여 레이아웃 안정화 */
+  display: inline-block;
+  min-width: 60px;
 }
 
 .question-topic {
@@ -387,6 +678,10 @@ permalink: /certifications/aws-saa/
   background: var(--bg-primary);
   padding: 0.25rem 0.75rem;
   border-radius: 12px;
+  /* CLS 최적화: 인라인 블록으로 설정하여 레이아웃 안정화 */
+  display: inline-block;
+  white-space: nowrap;
+  min-width: 100px;
 }
 
 .question-content p {
