--- a/certifications/information-security-engineer.html
+++ b/certifications/information-security-engineer.html
@@ -130,6 +130,77 @@ permalink: /certifications/information-security-engineer/
     </div>
   </div>
 
+  <div class="practice-resources">
+    <h2>기출문제 사이트</h2>
+    <div class="resources-intro">
+      <p>정보보안기사 자격증 준비를 위한 기출문제 사이트입니다. 다양한 기출문제를 풀어보며 실력을 향상시키세요.</p>
+    </div>
+    <div class="resources-grid">
+      <a href="https://www.kinz.kr/subject/258531" target="_blank" rel="noopener noreferrer" class="resource-card" aria-label="킨즈 - 정보보안기사 필기 기출문제 및 CBT 모의고사 (새 창)">
+        <div class="resource-icon" aria-hidden="true">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+          </svg>
+        </div>
+        <div class="resource-content">
+          <h3>킨즈 (Kinz)</h3>
+          <p>정보보안기사 필기 기출문제 및 CBT 모의고사</p>
+          <span class="resource-link">사이트 방문 →</span>
+        </div>
+      </a>
+      <a href="https://www.comcbt.com/xe/iz" target="_blank" rel="noopener noreferrer" class="resource-card" aria-label="전자문제집 CBT - 정보보안기사 필기 기출문제 및 CBT 모의고사 (새 창)">
+        <div class="resource-icon" aria-hidden="true">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+            <polyline points="14 2 14 8 20 8"></polyline>
+            <line x1="16" y1="13" x2="8" y2="13"></line>
+            <line x1="16" y1="17" x2="8" y2="17"></line>
+          </svg>
+        </div>
+        <div class="resource-content">
+          <h3>전자문제집 CBT</h3>
+          <p>정보보안기사 필기 기출문제 및 CBT 모의고사</p>
+          <span class="resource-link">사이트 방문 →</span>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="online-videos">
+    <h2>온라인 강의</h2>
+    <div class="videos-intro">
+      <p>edu.2twodragon.com에서 제공하는 정보보안기사 온라인 강의를 확인하세요. 실무 중심의 상세한 설명과 함께 자격증을 준비할 수 있습니다.</p>
+    </div>
+    <div class="videos-grid">
+      <a href="https://edu.2twodragon.com/courses/information-security-engineer" target="_blank" rel="noopener noreferrer" class="video-card" aria-label="정보보안기사 필기 강의 - 온라인 강의 보기 (새 창)">
+        <div class="video-icon" aria-hidden="true">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <polygon points="23 7 16 12 23 17 23 7"></polygon>
+            <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+          </svg>
+        </div>
+        <div class="video-content">
+          <h3>정보보안기사 필기 강의</h3>
+          <p>정보보안기사 필기 시험 대비 온라인 강의</p>
+          <span class="video-link">강의 보기 →</span>
+        </div>
+      </a>
+      <a href="https://edu.2twodragon.com/courses/information-security-engineer-practical" target="_blank" rel="noopener noreferrer" class="video-card" aria-label="정보보안기사 실기 강의 - 온라인 강의 보기 (새 창)">
+        <div class="video-icon" aria-hidden="true">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <polygon points="23 7 16 12 23 17 23 7"></polygon>
+            <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+          </svg>
+        </div>
+        <div class="video-content">
+          <h3>정보보안기사 실기 강의</h3>
+          <p>정보보안기사 실기 시험 대비 온라인 강의</p>
+          <span class="video-link">강의 보기 →</span>
+        </div>
+      </a>
+    </div>
+  </div>
+
   <div class="exam-questions">
     <h2>기출문제 및 연습 문제</h2>
     <div class="questions-intro">
@@ -432,6 +503,175 @@ permalink: /certifications/information-security-engineer/
   line-height: 1.6;
 }
 
+.practice-resources {
+  margin-bottom: 3rem;
+}
+
+.practice-resources h2 {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+  color: var(--text-primary);
+  border-bottom: 2px solid var(--border);
+  padding-bottom: 0.5rem;
+}
+
+.resources-intro {
+  margin-bottom: 2rem;
+  padding: 1.5rem;
+  background: var(--bg-secondary);
+  border-radius: 8px;
+  border-left: 4px solid var(--primary);
+}
+
+.resources-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1.5rem;
+}
+
+.resource-card {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 1.5rem;
+  background: var(--bg-secondary);
+  border: 1px solid var(--border);
+  border-radius: 8px;
+  text-decoration: none;
+  color: inherit;
+  transition: transform 0.2s, box-shadow 0.2s, border-color 0.2s;
+}
+
+.resource-card:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  border-color: var(--primary);
+}
+
+.resource-card:focus-visible {
+  outline: 2px solid var(--primary);
+  outline-offset: 2px;
+}
+
+.resource-icon {
+  flex-shrink: 0;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--primary);
+  color: white;
+  border-radius: 8px;
+}
+
+.resource-content {
+  flex: 1;
+}
+
+.resource-content h3 {
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
+  color: var(--text-primary);
+}
+
+.resource-content p {
+  color: var(--text-secondary);
+  margin-bottom: 0.75rem;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.resource-link {
+  color: var(--primary);
+  font-weight: 500;
+  font-size: 0.9rem;
+}
+
+.online-videos {
+  margin-bottom: 3rem;
+}
+
+.online-videos h2 {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+  color: var(--text-primary);
+  border-bottom: 2px solid var(--border);
+  padding-bottom: 0.5rem;
+}
+
+.videos-intro {
+  margin-bottom: 2rem;
+  padding: 1.5rem;
+  background: var(--bg-secondary);
+  border-radius: 8px;
+  border-left: 4px solid var(--primary);
+}
+
+.videos-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1.5rem;
+}
+
+.video-card {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 1.5rem;
+  background: linear-gradient(135deg, var(--primary), #10b981);
+  border: 1px solid var(--border);
+  border-radius: 8px;
+  text-decoration: none;
+  color: white;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.video-card:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.video-card:focus-visible {
+  outline: 2px solid white;
+  outline-offset: 2px;
+}
+
+.video-icon {
+  flex-shrink: 0;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 8px;
+}
+
+.video-content {
+  flex: 1;
+}
+
+.video-content h3 {
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
+  color: white;
+}
+
+.video-content p {
+  color: rgba(255, 255, 255, 0.9);
+  margin-bottom: 0.75rem;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.video-link {
+  color: white;
+  font-weight: 500;
+  font-size: 0.9rem;
+  text-decoration: underline;
+}
+
 @media (max-width: 768px) {
   .page-header h1 {
     font-size: 2rem;
@@ -445,6 +685,22 @@ permalink: /certifications/information-security-engineer/
     flex-direction: column;
     align-items: flex-start;
     gap: 0.5rem;
+  }
+
+  .resources-grid,
+  .videos-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .resource-card,
+  .video-card {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .resource-icon,
+  .video-icon {
+    margin: 0 auto;
   }
 }
 </style>
