--- a/certifications/isms-p.html
+++ b/certifications/isms-p.html
@@ -127,6 +127,62 @@ permalink: /certifications/isms-p/
     </div>
   </div>
 
+  <div class="practice-resources">
+    <h2>학습 자료 및 기출문제</h2>
+    <div class="resources-intro">
+      <p>ISMS-P 인증 준비를 위한 학습 자료 및 기출문제 사이트입니다. 다양한 자료를 활용하여 인증을 준비하세요.</p>
+    </div>
+    <div class="resources-grid">
+      <a href="https://isms.kisa.or.kr/" target="_blank" rel="noopener noreferrer" class="resource-card" aria-label="KISA ISMS-P 공식 사이트 - 인증 가이드 및 요구사항 확인 (새 창)">
+        <div class="resource-icon" aria-hidden="true">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+          </svg>
+        </div>
+        <div class="resource-content">
+          <h3>KISA ISMS-P 공식 사이트</h3>
+          <p>ISMS-P 인증 가이드 및 요구사항 확인</p>
+          <span class="resource-link">사이트 방문 →</span>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="online-videos">
+    <h2>온라인 강의</h2>
+    <div class="videos-intro">
+      <p>edu.2twodragon.com에서 제공하는 ISMS-P 인증 준비 온라인 강의를 확인하세요. 실무 중심의 상세한 설명과 함께 인증을 준비할 수 있습니다.</p>
+    </div>
+    <div class="videos-grid">
+      <a href="https://edu.2twodragon.com/courses/isms-p" target="_blank" rel="noopener noreferrer" class="video-card" aria-label="ISMS-P 인증 준비 강의 - 온라인 강의 보기 (새 창)">
+        <div class="video-icon" aria-hidden="true">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <polygon points="23 7 16 12 23 17 23 7"></polygon>
+            <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+          </svg>
+        </div>
+        <div class="video-content">
+          <h3>ISMS-P 인증 준비 강의</h3>
+          <p>ISMS-P 인증 대비 온라인 강의 및 실무 가이드</p>
+          <span class="video-link">강의 보기 →</span>
+        </div>
+      </a>
+      <a href="https://edu.2twodragon.com/courses/isms-p-aws" target="_blank" rel="noopener noreferrer" class="video-card" aria-label="AWS 기반 ISMS-P 인증 강의 - 온라인 강의 보기 (새 창)">
+        <div class="video-icon" aria-hidden="true">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <polygon points="23 7 16 12 23 17 23 7"></polygon>
+            <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+          </svg>
+        </div>
+        <div class="video-content">
+          <h3>AWS 기반 ISMS-P 인증</h3>
+          <p>AWS 환경에서 ISMS-P 인증 준비 실무 가이드</p>
+          <span class="video-link">강의 보기 →</span>
+        </div>
+      </a>
+    </div>
+  </div>
+
   <div class="exam-questions">
     <h2>기출문제 및 연습 문제</h2>
     <div class="questions-intro">
@@ -449,6 +505,175 @@ permalink: /certifications/isms-p/
   line-height: 1.6;
 }
 
+.practice-resources {
+  margin-bottom: 3rem;
+}
+
+.practice-resources h2 {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+  color: var(--text-primary);
+  border-bottom: 2px solid var(--border);
+  padding-bottom: 0.5rem;
+}
+
+.resources-intro {
+  margin-bottom: 2rem;
+  padding: 1.5rem;
+  background: var(--bg-secondary);
+  border-radius: 8px;
+  border-left: 4px solid var(--primary);
+}
+
+.resources-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1.5rem;
+}
+
+.resource-card {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 1.5rem;
+  background: var(--bg-secondary);
+  border: 1px solid var(--border);
+  border-radius: 8px;
+  text-decoration: none;
+  color: inherit;
+  transition: transform 0.2s, box-shadow 0.2s, border-color 0.2s;
+}
+
+.resource-card:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  border-color: var(--primary);
+}
+
+.resource-card:focus-visible {
+  outline: 2px solid var(--primary);
+  outline-offset: 2px;
+}
+
+.resource-icon {
+  flex-shrink: 0;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--primary);
+  color: white;
+  border-radius: 8px;
+}
+
+.resource-content {
+  flex: 1;
+}
+
+.resource-content h3 {
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
+  color: var(--text-primary);
+}
+
+.resource-content p {
+  color: var(--text-secondary);
+  margin-bottom: 0.75rem;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.resource-link {
+  color: var(--primary);
+  font-weight: 500;
+  font-size: 0.9rem;
+}
+
+.online-videos {
+  margin-bottom: 3rem;
+}
+
+.online-videos h2 {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+  color: var(--text-primary);
+  border-bottom: 2px solid var(--border);
+  padding-bottom: 0.5rem;
+}
+
+.videos-intro {
+  margin-bottom: 2rem;
+  padding: 1.5rem;
+  background: var(--bg-secondary);
+  border-radius: 8px;
+  border-left: 4px solid var(--primary);
+}
+
+.videos-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1.5rem;
+}
+
+.video-card {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 1.5rem;
+  background: linear-gradient(135deg, var(--primary), #10b981);
+  border: 1px solid var(--border);
+  border-radius: 8px;
+  text-decoration: none;
+  color: white;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.video-card:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.video-card:focus-visible {
+  outline: 2px solid white;
+  outline-offset: 2px;
+}
+
+.video-icon {
+  flex-shrink: 0;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 8px;
+}
+
+.video-content {
+  flex: 1;
+}
+
+.video-content h3 {
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
+  color: white;
+}
+
+.video-content p {
+  color: rgba(255, 255, 255, 0.9);
+  margin-bottom: 0.75rem;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.video-link {
+  color: white;
+  font-weight: 500;
+  font-size: 0.9rem;
+  text-decoration: underline;
+}
+
 @media (max-width: 768px) {
   .page-header h1 {
     font-size: 2rem;
@@ -462,6 +687,22 @@ permalink: /certifications/isms-p/
     flex-direction: column;
     align-items: flex-start;
     gap: 0.5rem;
+  }
+
+  .resources-grid,
+  .videos-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .resource-card,
+  .video-card {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .resource-icon,
+  .video-icon {
+    margin: 0 auto;
   }
 }
 </style>
